Fix spacing between trailers

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -6,3 +6,7 @@ body {
 #profile_image {
   margin-right: 5px;
 }
+
+.trailer {
+  margin-bottom: 20px;
+}
